--- a/src/app/payment-list/payment-list.component.css
+++ b/src/app/payment-list/payment-list.component.css
@@ -1,22 +1,7 @@
-nav {
-    background-color: var(--color-background-blue);
-    height: 10vh;
-}
-
 section {
     background-color: var(--color-background-gray);
-    height: 90vh;
-}
-
-h1 {
-    font-size: 24px;
-    color: var(--color-white);
-    font-weight: 200;
-}
-
-.title-bold-login {
-    color: var(--color-white);
-    font-weight: 600;
+    min-height: 90vh;
+    padding-bottom: 30px;
 }
 
 h2 {
