--- a/src/app/payment-list/payment-list.component.html
+++ b/src/app/payment-list/payment-list.component.html
@@ -1,10 +1,4 @@
-<nav class="navbar navbar-light">
-    <div class="container">
-        <a class="navbar-brand" href="/payments">
-            <h1><strong class="title-bold-login">Pay</strong>Friends</h1>
-        </a>
-    </div>
-</nav>
+<app-navbar></app-navbar>
 
 <section>
     <div class="wrapper">
@@ -12,7 +6,9 @@
             <h2>Meus pagamentos</h2>
 
             <div class="text-end mb-3">
-                <button type="button" class="btn btn-primary btn-sm" (click)="newPayment.open(); advancedFilterForm.reset();">ADICIONAR PAGAMENTO</button>
+                <button type="button" class="btn btn-primary btn-sm" (click)="newPayment.open(); advancedFilterForm.reset();">
+                    ADICIONAR PAGAMENTO
+                </button>
             </div>
 
             <div class="table-list">
@@ -27,6 +23,13 @@
                         (keypress)="keyPressInput($event.keyCode)"
                     >
                     </po-input>
+                    <po-button
+                        p-icon="po-icon po-icon-parameters"
+                        p-label="Filtros"
+                        class="po-mt-1 po-ml-1"
+                        (p-click)="advancedFilterModal.open()"
+                    >
+                    </po-button>
 
                     <div class="po-md-7 container-combo-box">
                         <po-combo
@@ -40,11 +43,21 @@
                     </div>
 
                     <ul class="pagination pt-2">
-                        <li class="page-item"><po-button p-type="link" p-label="&laquo;" (p-click)="onChangePagination('previous')"></po-button></li>
-                        <li class="page-item"><po-button p-type="link" p-label="1" (p-click)="getItems(1, 5)"></po-button></li>
-                        <li class="page-item"><po-button p-type="link" p-label="2" (p-click)="getItems(2, 5)"></po-button></li>
-                        <li class="page-item"><po-button p-type="link" p-label="3" (p-click)="getItems(3, 5)"></po-button></li>
-                        <li class="page-item"><po-button p-type="link" p-label="&raquo;" (p-click)="onChangePagination('next')"></po-button></li>
+                        <li class="page-item">
+                            <po-button p-type="link" p-label="&laquo;" (p-click)="onChangePagination('previous')"></po-button>
+                        </li>
+                        <li class="page-item">
+                            <po-button [p-type]="currentPage === 1 ? 'primary' : 'link'" p-label="1" (p-click)="getItems(1, pageSize)"></po-button>
+                        </li>
+                        <li class="page-item">
+                            <po-button [p-type]="currentPage === 2 ? 'primary' : 'link'" p-label="2" (p-click)="getItems(2, pageSize)"></po-button>
+                        </li>
+                        <li class="page-item">
+                            <po-button [p-type]="currentPage === 3 ? 'primary' : 'link'" p-label="3" (p-click)="getItems(3, pageSize)"></po-button>
+                        </li>
+                        <li class="page-item">
+                            <po-button p-type="link" p-label="&raquo;" (p-click)="onChangePagination('next')"></po-button>
+                        </li>
                     </ul>
                 </div>
 
@@ -70,9 +83,8 @@
         <div class="po-row">
             <div class="po-md-6 po-pl-0">
                 <po-input
+                    p-clean
                     formControlName="user"
-                    required="true"
-                    p-clean="true"
                     p-placeholder="Usuário*"
                     [p-auto-focus]="true"
                     [p-maxlength]="50"
@@ -81,24 +93,21 @@
             </div>
 
             <div class="po-md-6 po-pr-0">
-                <po-input
+                <po-number
+                    p-clean
                     formControlName="value"
-                    p-clean="true"
                     p-placeholder="Valor*"
-                    required="true"
-                    [p-maxlength]="30"
-                >        
-                </po-input>
+                >
+                </po-number>
             </div>
         </div>
 
         <div class="po-row">
             <div class="po-md-6 po-pl-0">
                 <po-datepicker
+                    p-clean
                     formControlName="date"
-                    p-clean="true"
                     p-format="dd/mm/yyyy"
-                    required="true"
                     p-placeholder="Data*"
                 >
                 </po-datepicker>
@@ -106,9 +115,8 @@
 
             <div class="po-md-6 po-pr-0">
                 <po-input
+                    p-clean
                     formControlName="title"
-                    p-clean="true"
-                    required="true"
                     p-placeholder="Título*"
                     [p-maxlength]="50"
                 >        
@@ -118,7 +126,62 @@
     </form>
 
     <po-modal-footer [p-disabled-align]="false">
-        <po-button p-type="default" p-label="Cancelar" (p-click)="newPayment.close(); advancedFilterForm.reset();"> </po-button>
-        <po-button p-type="primary" p-label="Salvar" style="background-color: var(--color-03);" (p-click)="savePayment(advancedFilterForm.value)"> </po-button>
-      </po-modal-footer>
+        <po-button
+            p-type="default"
+            p-label="Cancelar"
+            (p-click)="newPayment.close(); advancedFilterForm.reset(); editRegister = false;"
+        >
+        </po-button>
+        <po-button
+            p-type="primary"
+            p-label="Salvar"
+            (p-click)="savePayment(advancedFilterForm.value)"
+        >
+        </po-button>
+    </po-modal-footer>
+</po-modal>
+
+<po-modal
+    #advancedFilterModal
+    p-title="Filtro avançado"
+    [p-primary-action]="advancedFilterPrimaryAction"
+>
+    <div class="po-row po-mr-0 po-ml-0">
+        <po-input
+            p-clean
+            p-placeholder="Usuário"
+            class="po-md-6 po-pl-0"
+            [(ngModel)]="userSearchAdvanced"
+        >
+        </po-input>
+
+        <div class="po-md-6 po-pr-0">
+            <po-input
+                p-clean
+                p-placeholder="Título"
+                [(ngModel)]="titleSearchAdvanced"
+            >
+            </po-input>
+        </div>
+    </div>
+
+    <div class="po-row po-mr-0 po-ml-0">
+        <po-datepicker
+            p-clean
+            class="po-md-6 po-pl-0"
+            p-format="dd/mm/yyyy"
+            p-placeholder="Data"
+            [(ngModel)]="dateSearchAdvanced"
+        >
+        </po-datepicker>
+
+        <div class="po-md-6 po-pr-0">
+            <po-input
+                p-clean
+                p-placeholder="Valor"
+                [(ngModel)]="valueSearchAdvanced"
+            >
+            </po-input>
+        </div>
+    </div>
 </po-modal>
