--- a/src/app/payment-list/navbar/navbar.component.html
+++ b/src/app/payment-list/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light">
-    <div class="container">
-        <a class="navbar-brand" href="/payments">
+    <div class="container-navbar">
+        <a class="navbar-brand">
             <h1><strong class="title-bold-login">Pay</strong>Friends</h1>
         </a>
 
