--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,6 @@
     --color-blue-light: rgba(47, 130, 221);
     --color-blue-dark: rgba(0, 45, 105);
     --color-text-black: #333333;
+    --color-text-gray: #69788C;
     --color-white: #FFF;
 }
